feat: production hardening, QA fixes, and pre-deploy checklist
Backend:
- Fix Midtrans webhook signature verification (SHA-512)
- Fix JWT double-encode vulnerability, rate limit AUTH_MAX 5→2
- Fix N+1 query on getMyLahan() with batch JPQL (101→2 queries)
- Add subscription expiry scheduler (daily 00:05 Jakarta, downgrade ke GRATIS)
- Add file upload size/magic-bytes/dimension validation (ImageValidator)
- Expand AdminAgentController: /payments, /audit, /users/{id}, /system/health
- Add AuditAction: LAHAN_PHOTO_UPLOAD, LAHAN_PHOTO_DELETE, SUBSCRIPTION_EXPIRED
- Add pagination (limit/offset) on lahan, panen, biaya endpoints
- Fix CORS default from wildcard to empty, session fixation protection
- Fix GlobalExceptionHandler returns structured VALIDATION_ERROR
- Externalize subscription prices to application.yml / env vars
- Fix refresh token rotation: invalidate old tokens on login

Frontend:
- Add forgot password screen + link di login
- Fix WillPopScope → PopScope (Flutter 3.x)
- Fix chart anomaly: clamp negative values di semua chart screens
- Add form validation: phone regex, password min 8, harga TBS positif, jumlah pohon range
- Add skeleton loading untuk lahan screen dan biaya screen
- Fix desugar_jdk_libs 2.0.4 → 2.1.4 (AGP 8.11.1 compatibility)
- Setup flutter_launcher_icons + flutter_native_splash config

Docker / Infra:
- Add Caddy reverse proxy with auto-HTTPS, security headers
- Add postgres-backup-local cron (daily 02:00, 7-day retention)
- Add Uptime Kuma monitoring service (port 3001 localhost-only)
- Add backup.sh + deploy.sh scripts
- Update .env.prod.example with all required variables

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>